add BT tạo form Sở thích

--- a/tao-CV.html
+++ b/tao-CV.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+    <meta charset="UTF-8">
+    <title>MY CV</title>
 </head>
 <body>
+     <img src="https://2.bp.blogspot.com/-OvzSvVKgZ-o/WKMFGVDf2bI/AAAAAAAAGYA/6nSIGSOOAmEpbfpfKsJ393SPT_FCHKPXgCEw/s1600/anh4x6.jpg" alt="không hiển thị" width="100" height="100">
+           <h3 id="a">THÔNG TIN LIỆN HỆ</h3>
+     <p>Họ và tên: Trần Quỳnh Hoa</p>
+           <br>Địa chỉ: Hải châu, Đà Nẵng
+           <br> SĐT :12345678
+           <br> Email: abc@gmail.com
+           <h3 id="b">TRÌNH ĐỘ HỌC VẤN</h3>
+                <ul style="list-style-type: square">
+                    <li>Đại học Ngoại ngữ Đà Nẵng</li>
+                    <li> CodeGym</li>
+                </ul>
+           <h3>KINH NGHIỆM LÀM VIỆC</h3>
+             <STRONG>Cộng tác viên phiên dịch</STRONG> 2017- 2018
+              <br>- Nhận file dịch mỗi ngày
+              <br>- Phiên dịch theo các chủ đề ngẫu nhiên
+              <br>- Nộp lại đúng deadline
+              <br><STRONG>Nhân viên phát triển web site</STRONG>
+              <br> - Thiết kế web theo yêu cầu
+               <br>- Lập báo cáo hằng ngày cho công việc
+           <h3> KỸ NĂNG </h3>
+              <ul>
+                  <li>Tiếng anh</li>
+                    <ul style="list-style-type: none">-TOIEC 600</ul>
+                  <li> Tiếng Nhật</li>
+                     <ul style="list-style-type: none"> - JPT N2</ul>
+              </ul>
+       <h3> ĐỊNH HƯỚNG PHÁT TRIỂN BẢN THÂN</h3>
+  <p>
+      -  Mong muốn trở thành một Web developer của công ty để nâng cao kinh nghiệm xây dựng website ứng dụng App mobile thoả mãn đam mê lập trình giao diện.
+      <br>-  Học hỏi tích lũy kinh nghiệm khả năng lập trình ngôn ngữ mới , đăc biệt mảng Fond end ( HTML, CSS, JavaScript , Js…) từ các A/chị trong công ty
+      <br>-  Mong muốn một nhân viên chính thức của công trong thời gian thử việc ngắn nhất
+      <br>- Trở kỹ sư giỏi tham gia vào các dự án phát triển phần mềm với những khách hàng hàng đầu Nhật Bản
+      <br>- Khát khao hòa mình vào không khí vui tươi, trẻ trung nhưng cũng không kém phần chuyên nghiệp của phòngđào tạo trước khi chính thức bắt tay vào các dự án đầy cam go và thử thách.
+  </p>
 
 </body>
 </html>
