--- a/thuc-hanh-tao-form-co-ban.html
+++ b/thuc-hanh-tao-form-co-ban.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <style>
+        .wufoo {
+            font-family: "Lucida Grande","Lucida Sans Unicode", Tahoma, sans-serif;
+        }
+    </style>
 </head>
 <body>
-$END$
+<form method="get" action="simpleform.html" class="wufoo">
+    <h2>Order Form</h2><br>
+    <p>What would you like to buy?</p>
+    <select name="lựa chọn">
+        <option value=" ">A</option>
+        <option >B(+ 0.5$)</option>
+        <option>B(+ 0.5$</option>
+    </select>
+    <p>How many would you like to order?</p>
+    <label><input type="radio" name="rd" >1-10$</label><br>
+    <label><input type="radio" name="rd">2-20$</label><br>
+    <label><input type="radio" name="rd">3-25$</label>
+    <p>Name<span color="red">*</span></p>
+    <input type="text" name="first name" placeholder="Firstname" size="15">
+    <input type="text" name="last name" placeholder="Lastname" size="15">
+    <p>Email</p>
+    <input type="text" name="email" size="35">
+    <p>Phone Number</p>
+    <input type = "text" name="phone1" size="5"/> -
+    <input type = "text" name="phone2" size="5"/> -
+    <input type = "text" name="phone3" size="5"/><br><br>
+    <input type="Submit" value="Submit">
+
+</form>
 </body>
 </html>
