--- a/tao-danh-sach.html
+++ b/tao-danh-sach.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Danh sách các nước</title>
 </head>
 <body>
-$END$
+<ul style="list-style-type: disc" >
+    <li> <strong>Việt Nam</strong></li>
+    <ol type="1">
+        <li> Hà Nội</li>
+        <li> Sài Gòn</li>
+        <li> Huế</li>
+        <li> Đà Nẵng</li>
+    </ol>
+    <li> <strong>Hoa Kỳ</strong></li>
+    <ol type="1">
+        <li> New york</li>
+        <li> Los Angeles</li>
+        <li> Chicago</li>
+        <li> Houston</li>
+    </ol>
+    <li> <strong>Trung quốc</strong></li>
+    <ol type="1">
+        <li> Bejing</li>
+        <li> Chongnquing</li>
+        <li> Shanghai</li>
+        <li> Tianjin</li>
+    </ol>
+</ul>
 </body>
 </html>
