add form survey

--- a/BT-tao-form-co-ban.html
+++ b/BT-tao-form-co-ban.html
@@ -9,7 +9,7 @@
 <form>
     <table>
         <tr>
-            <td colspan="4"><h2> SỞ THÍCH CỦA BẠN</h2></td>
+            <td colspan="4" align="center"><h2> SỞ THÍCH CỦA BẠN</h2></td>
         </tr>
         <tr>
             <td id="a1">Họ và tên</td>
